Bug 65370 - Element Dock: empty Symbol window
Summary: Element Dock: empty Symbol window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-04 18:48 UTC by Mateusz
Modified: 2013-06-24 12:32 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (45.06 KB, image/png)
2013-06-04 18:48 UTC, Mateusz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mateusz 2013-06-04 18:48:42 UTC
Created attachment 80303 [details]
Screenshot

Hey

I have Ubuntu 10.04 with GNOME 2.10 and new "Elements Dock" display only gray field. Problem doesn't concern Windows.

Wersja: 4.1.0.0.beta1+
Build ID: 8c63280ccd53d047a710f21e749214d0064a3d1
TinderBox: Linux-x86@34-Release-Configuration-RHEL5-Baseline, Branch:libreoffice-4-1, Time: 2013-06-03_16:55:46
Comment 1 Konrad 2013-06-04 19:29:21 UTC
I can confirm.

Kubuntu 12.04 32bit
LO 4.1beta1 Time: 2013-06-02_18:17:58
Comment 2 Tomaz Vajngerl 2013-06-04 20:14:12 UTC
Hi,

Yes this is a known bug. It only happens the first time the dock is used (as far as I know). If you force that the dock is redrawn (for example if you resize it and dock it) then the elements will be drawn. After this the bug does not occur anymore.

Regard, Tomaž
Comment 3 Jorendc 2013-06-09 23:01:22 UTC
(In reply to comment #2)
> Hi,
> 
> Yes this is a known bug. It only happens the first time the dock is used (as
> far as I know). If you force that the dock is redrawn (for example if you
> resize it and dock it) then the elements will be drawn. After this the bug
> does not occur anymore.

This also solves the problem, but I don't think this is the good way to fix this?

diff --git a/starmath/source/ElementsDockingWindow.cxx b/starmath/source/Element
index 7be18ca..51f87c6 100644
--- a/starmath/source/ElementsDockingWindow.cxx
+++ b/starmath/source/ElementsDockingWindow.cxx
@@ -448,6 +448,8 @@ SmElementsDockingWindow::SmElementsDockingWindow(SfxBindings
 
     maElementListBox.SelectEntry(OUString(SmResId(RID_CATERGORY_UNARY_BINARY_OP
     maElementsControl.setElementSetId(RID_CATERGORY_UNARY_BINARY_OPERATORS);
+
+    Resize();
 }
 
 SmElementsDockingWindow::~SmElementsDockingWindow ()

If not (and I think that's most likely ;-) ), are there any 'search directions'/code pointers?

Kind regards,
Joren
Comment 4 Tomaz Vajngerl 2013-06-10 05:18:07 UTC
Hi,

This solution is OK for me but for the sake of consistency look at [1].

Regards, Tomaž

[1]:
http://cgit.freedesktop.org/libreoffice/core/tree/starmath/source/edit.cxx#n114
Comment 5 Thomas Arnhold 2013-06-16 17:58:53 UTC
Tomaž: The solution from Jorend seems ok. The one from edit.cxx with Show() doesn't work for ElementsDockingWindow(). Maybe there are missing default values for the window?

The bug can be reproduced on Windows, too. Steps to reproduce:

1. Delete the configuration folder (~/.config/libreoffice/ or AppData/LibreOffice)
2. Start libreoffice math

The elements docking window will be empty.


I've updated the fix from Jorend:

diff --git a/starmath/source/ElementsDockingWindow.cxx b/starmath/source/ElementsDockingWindow.cxx
index 7e8d331..b1b5b7a 100644
--- a/starmath/source/ElementsDockingWindow.cxx
+++ b/starmath/source/ElementsDockingWindow.cxx
@@ -493,7 +493,7 @@ SmElementsDockingWindow::SmElementsDockingWindow(SfxBindings* pInputBindings, Sf
     maElementListBox.SelectEntry(OUString(SmResId(RID_CATEGORY_UNARY_BINARY_OPERATORS)));
     maElementsControl.setElementSetId(RID_CATEGORY_UNARY_BINARY_OPERATORS);
 
-    Invalidate();
+    Resize();
 }
 
 SmElementsDockingWindow::~SmElementsDockingWindow ()
Comment 6 Commit Notification 2013-06-22 18:34:08 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90e4d69a4b0151ed3dfc4b56471ae5562c0b4060

fdo#65370 Dock ElementsDockingWindow to left at initial use and redraw



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Laurent Balland 2013-06-24 07:45:35 UTC
Hello,
I confirm with LibO 4.1.0.RC1 on Win7. It is a bad user experience, as this huge dock hides all menus and toolbars.
Newcomers to LibO would be lost.
Comment 8 Commit Notification 2013-06-24 09:04:10 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2a442f19faa52aef87e56d6bd3f8e38f7dec9572&h=libreoffice-4-1

fdo#65370 Dock ElementsDockingWindow to left at initial use and redraw


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Adolfo Jayme Barrientos 2013-06-24 12:32:28 UTC
@Tomaž, shouldn't the old Elements window be hidden by default and the new one docked to the right instead?