fdo#65370 Dock ElementsDockingWindow to left at initial use and redraw

Change-Id: I0a7648569541667bba80cffde978558a9206c089
Reviewed-on: https://gerrit.libreoffice.org/4449
Reviewed-by: Thomas Arnhold <thomas@arnhold.org>
Tested-by: Thomas Arnhold <thomas@arnhold.org>